// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/Button Default Button 1`] = `
<button
  className="px-4 py-2 font-sans text-lg transition cursor-pointer focus-offset bg-primary text-white hover:opacity-60"
  disabled={false}
  type="button"
>
  I am a button
</button>
`;

exports[`Storyshots UI Elements/Button Default Outlined Button 1`] = `
<button
  className="px-4 py-2 font-sans text-lg transition cursor-pointer focus-offset bg-white border border-primary text-primary hover:bg-primary hover:bg-opacity-10"
  disabled={false}
  outline={true}
  type="button"
>
  I am an outlined button
</button>
`;

exports[`Storyshots UI Elements/Button Disabled Button 1`] = `
<button
  className="px-4 py-2 font-sans text-lg transition bg-gray-300 text-gray-600 cursor-default"
  disabled={true}
  type="button"
>
  I am a disabled button
</button>
`;

exports[`Storyshots UI Elements/Button Secondary Button 1`] = `
<button
  className="px-4 py-2 font-sans text-lg transition cursor-pointer focus-offset bg-secondary text-white hover:opacity-60"
  disabled={false}
  secondary={true}
  type="button"
>
  I am a secondary button
</button>
`;

exports[`Storyshots UI Elements/Button Secondary Outlined Button 1`] = `
<button
  className="px-4 py-2 font-sans text-lg transition cursor-pointer focus-offset bg-white border border-secondary text-secondary hover:bg-secondary hover:bg-opacity-10"
  disabled={false}
  outline={true}
  secondary={true}
  type="button"
>
  I am a secondary outlined button
</button>
`;
